<resources>
    <string name="app_name">Travel19</string>
    <string name="content_description_search">content_description_search</string>
    <string name="content_description_home">content_description_home</string>
    <string name="Search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="get_started">Get Started</string>
    <string name="restrictions_type">Start by choosing what type of restrictions \nyou want to see</string>
    <string name="countries_restrictions">Countries</string>
    <string name="airport_restrictions">Airport</string>
    <string name="airport_descriptions">Here are details about restrictions which airports have</string>
    <string name="countries_description">Here you can see which restrictions countries have</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="vaccine">Vaccine</string>
    <string name="fullName">Full Name</string>
    <string name="lastName">Lastname</string>
    <string name="nationality">Nationality</string>
    <string name="login_failed">Login failed</string>
    <string name="invalid_username">Username is not valid</string>
    <string name="invalid_password">Password is not valid</string>
    <string name="welcome">Welcome</string>
    <string name="dash">\u0020 - \u0020</string>
    <string name="email_hint">Email</string>
    <string name="sign_in_text">Sign In</string>
    <string name="create_new_account">Create new account!</string>
    <string name="please_fill_in_the_form_to_continue">Please fill in the form to continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="sign_in">\u0020 Sign In</string>
    <string name="full_name_errror">Full name is required!</string>
    <string name="nationality_error">Nationality should\'t be empty</string>
    <string name="vaccine_error">Vaccine shouldn\'t be empty</string>
    <string name="invalid_email">Please enter valid Email</string>
    <string name="percentage">%</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="allowed_with">Allowed with</string>
    <string name="fetching">Fetching</string>
    <string name="invalid_destination">Please enter destination!</string>
    <string name="invalid_location">Please enter location</string>
    <string name="none">None</string>
    <string name="you_don_t_have_saved_travel_plans">You don\'t have saved travel plans!</string>
    <string name="user_not_logged_in">Please SignUp for saving travel plans!</string>
    <string name="pcr_required_for_residents">PCR Required For Residents</string>
    <string name="pcr_required_for_none_residents">PCR Required For None Residents</string>
    <string name="allows_business_visit">Allows Business Visit</string>
    <string name="allowed_tourists">Allowed Tourists</string>
    <string name="covid_passport_required">Covid Passport Required</string>
    <string name="travel_regulation">Travel Regulation</string>
    <string name="general_restriction">General Restriction</string>
    <string name="vaccination">Vaccination</string>
    <string name="dose_required">Dose required</string>
    <string name="days_after_vaccination">Vaccination days</string>
    <string name="transfer_airport_travel_regulation">Transfer Airport Travel Regulation</string>
    <string name="transfer_airport_general_restriction">Transfer Airport General Restriction</string>
    <string name="no_vaccination_data_to_show">No vaccination data to show!</string>
    <string name="no_transfer_airport_data_to_show">No transfer airport data to show!</string>
    <string name="sign_up_warning">You should sign up to save plan!</string>
    <string name="sign_up_warning_update_plan">You should sign up to save plan!</string>
    <string name="plan_delete_confirmation">Plan deleted successfully!</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="update_text">Update</string>
</resources>